forge/tests/errors/missing_brace.fg
// Error test: missing closing brace
fn main() {
  let x = 5
  println(string(x))
